--- a/network-analysis.Rmd
+++ b/network-analysis.Rmd
@@ -41,7 +41,7 @@ Next, let's wrangle the campaign contribution data into a network-friendly data 
 # across all races
 contributions_simple <- contributions %>%
   select(recipname, name, c_code, boroughcd, amnt) %>%
-  # add filters (to be implemented in interactive version)
+  # add filters for later exploration
   filter(c_code %in% unique(contributions$c_code),
          boroughcd %in% unique(contributions$boroughcd),
          amnt > 0) %>%
@@ -151,9 +151,6 @@ This graph is fun to play with but not super informative. Let's do a little addi
 We can calculate and visualize node centrality quite easily using the `igraph` package. Individuals with high eigen values (a measure of centrality) are the most central to the network and received shared donations with the largest numbers of other candidates. Below, we label only individuals with an eigen value greater than 0.8.
 
 ```{r}
-# save seed for graphing
-my_seed <- 123
-
 # create graph object
 graph_df <- candidate_network %>%
   igraph::graph_from_data_frame(directed = FALSE)
@@ -164,7 +161,6 @@ V(graph_df)$betweenness <- betweenness(graph_df)
 V(graph_df)$eigen <- eigen_centrality(graph_df)$vector
 
 # visualize node centrality
-set.seed(my_seed)
 ggraph(graph_df, layout = "fr") +
   geom_edge_link(color = "gray", alpha = 0.5,  
                  show.legend = FALSE) +
@@ -190,11 +186,18 @@ V(graph_df)$community <- membership(communities)
 sizes(communities)
 
 # visualize communities
-set.seed(my_seed)
 ggraph(graph_df, layout = "fr") +
   geom_edge_link(color = "gray", alpha = 0.5, show.legend = FALSE) +
   geom_node_point(aes(color = as.factor(community))) +
-  labs(color = "Centrality") +
+  geom_node_text(aes(label = ifelse(community == 1, name, NA))) +
+  labs(color = "Community",
+       caption = "Community 1 members labelled") +
   theme_void()
 ```
 
+## Play Time!
+
+Congratulations, you just took a dataset from the NYC Open Data Portal, created a network from it, and analyzed the properties of that network all within an hour and a half... that's no small feat!  Feel free to use your remaining workshop time to play with the techniques you just learned. Some suggestions of what you might want to explore:
+
+  - Alter some of the parameters of the above analysis. How do your results change when you look only at small donations (e.g. <$50)? You might even take a look at the [data dictionary](https://data.cityofnewyork.us/api/views/rjkp-yttg/files/9d7a9ca4-e4c5-4aa3-86c0-9777889842e9?download=true&filename=Data_Dictionary_Contributions.xlsx) and filter your results to only look at certain contributor types (e.g. labor unions: EMPO in the c_code column) or only contributions coming from outside the city ("Z" in the boroughcd column).
+  - Explore some of the [other datasets available on the NYC Open Data Portal](https://opendata.cityofnewyork.us/data/#datasetscategory) and see if you can find additional datasets that might be interesting to explore using network analysis!
